Changed everything cat-related to a torta

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <!-- Your content goes here -->
-    <h1>Hello World!</h1>
-    <div id="kitty">
-        <img src="images/kitten.jpg" alt="This is a kitten.">
-        <button id="btn">I am a button.</button>
+    <h1> TORTA = LIFE!</h1>
+    <div id="torta">
+        <img src="https://th.bing.com/th/id/OIP.Fr9DgP_C2kbBMj7jxKPKEgHaE8?rs=1&pid=ImgDetMain" alt="This is a Torta.">
+        <button id="btn">Press to Eat.</button>
     </div>
 </body>
 </html>
